<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:padding="10dp"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="110dp"
       >
        <ImageView
            android:id="@+id/profile_image_circular"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:scaleType="fitCenter"
            />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_corner_text"
        android:layout_below="@+id/card_register"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/et_username"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:textColor="#fff"
        android:background="@drawable/rounded_corner_button"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_password"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:textStyle="bold"
        android:text="Already Have an Account??"
        android:textColor="#fff"
        android:textSize="20sp" />

</RelativeLayout>